main page update

--- a/index.html
+++ b/index.html
@@ -4,5 +4,48 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Main Page</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+    <body>
+        <header>
+            <img class="logo" src="images/logo.png" alt="Logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="category.html">Fiction</a></li>
+                    <li><a href="category.html">Educational</a></li>
+                    <li><a href="category.html">Historical</a></li>
+                    <li><a href="category.html">Thriller</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <div id="category">
+                <h2><a href="category.html">Fiction</a></h2>
+                <img class="book" src="images/fiction1.jpg" alt="Fiction Book 1">
+                <img class="book" src="images/fiction2.jpg" alt="Fiction Book 2">
+                <img class="book" src="images/fiction3.jpg" alt="Fiction Book 3">
+            </div>
+            <div id="category">
+                <h2><a href="category.html">Educational</a></h2>
+                <img class="book" src="images/edu1.jpg" alt="Educational Book 1">
+                <img class="book" src="images/edu2.jpg" alt="Educational Book 2">
+                <img class="book" src="images/edu3.jpg" alt="Educational Book 3">
+            </div>
+            <div id="category">
+                <h2><a href="category.html">Historical</a></h2>
+                <img class="book" src="images/history1.jpg" alt="Historical Book 1">
+                <img class="book" src="images/history2.jpg" alt="Historical Book 2">
+                <img class="book" src="images/history3.jpg" alt="Historical Book 3">
+            </div>
+            <div id="category">
+                <h2><a href="category.html">Thriller</a></h2>
+                <img class="book" src="images/thriller1.jpg" alt="Thriller Book 1">
+                <img class="book" src="images/thriller2.jpg" alt="Thriller Book 2">
+                <img class="book" src="images/thriller3.jpg" alt="Thriller Book 3">
+            </div>
+            
+        </main>
+    </body>
 </html>
