category page update

--- a/category.html
+++ b/category.html
@@ -4,5 +4,53 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Category</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+    <body>
+        <header>
+            <img class="logo" src="images/logo.png" alt="Logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="category.html">Fiction</a></li>
+                    <li><a href="category.html">Educational</a></li>
+                    <li><a href="category.html">Historical</a></li>
+                    <li><a href="category.html">Thriller</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <div class="category">
+                <h2><a href="category.html">Romance</a></h2>
+                <a href="bookdetail.html"><img class="book" src="images/romance1.jpg" alt="Romance Book 1"></a>
+                <a href="bookdetail.html"><img class="book" src="images/romance2.jpg" alt="Romance Book 2"></a>
+                <a href="bookdetail.html"><img class="book" src="images/romance3.jpg" alt="Romance Book 3"></a>
+            </div>
+            <div class="category">
+                <h2><a href="category.html">Adventure & Action</a></h2>
+                <a href="bookdetail.html"><img class="book" src="images/adventure1.jpg" alt="Adventure Book 1"></a>
+                <a href="bookdetail.html"><img class="book" src="images/adventure2.jpg" alt="Adventure Book 2"></a>
+                <a href="bookdetail.html"><img class="book" src="images/fiction3.jpg" alt="Adventure Book 3"></a>
+            </div>
+            <div class="category">
+                <h2><a href="category.html">Sci-Fi</a></h2>
+                <a href="bookdetail.html"><img class="book" src="images/scifi1.jpg" alt="Sci-Fi Book 1"></a>
+                <a href="bookdetail.html"><img class="book" src="images/scifi2.jpg" alt="Sci-Fi Book 2"></a>
+                <a href="bookdetail.html"><img class="book" src="images/fiction1.jpg" alt="Sci-Fi Book 3"></a>
+            </div>
+        </main>
+
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Copyright</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </footer>
+    </body>
 </html>
