--- a/index.html
+++ b/index.html
@@ -21,31 +21,43 @@
         </header>
 
         <main>
-            <div id="category">
+            <div class="category">
                 <h2><a href="category.html">Fiction</a></h2>
-                <img class="book" src="images/fiction1.jpg" alt="Fiction Book 1">
-                <img class="book" src="images/fiction2.jpg" alt="Fiction Book 2">
-                <img class="book" src="images/fiction3.jpg" alt="Fiction Book 3">
+                <a href="bookdetail.html"><img class="book" src="images/fiction1.jpg" alt="Fiction Book 1"></a>
+                <a href="bookdetail.html"><img class="book" src="images/fiction2.jpg" alt="Fiction Book 2"></a>
+                <a href="bookdetail.html"><img class="book" src="images/fiction3.jpg" alt="Fiction Book 3"></a>
             </div>
-            <div id="category">
+            <div class="category">
                 <h2><a href="category.html">Educational</a></h2>
-                <img class="book" src="images/edu1.jpg" alt="Educational Book 1">
-                <img class="book" src="images/edu2.jpg" alt="Educational Book 2">
-                <img class="book" src="images/edu3.jpg" alt="Educational Book 3">
+                <a href="bookdetail.html"><img class="book" src="images/edu1.jpg" alt="Educational Book 1"></a>
+                <a href="bookdetail.html"><img class="book" src="images/edu2.jpg" alt="Educational Book 2"></a>
+                <a href="bookdetail.html"><img class="book" src="images/edu3.jpg" alt="Educational Book 3"></a>
             </div>
-            <div id="category">
+            <div class="category">
                 <h2><a href="category.html">Historical</a></h2>
-                <img class="book" src="images/history1.jpg" alt="Historical Book 1">
-                <img class="book" src="images/history2.jpg" alt="Historical Book 2">
-                <img class="book" src="images/history3.jpg" alt="Historical Book 3">
+                <a href="bookdetail.html"><img class="book" src="images/history1.jpg" alt="Historical Book 1"></a>
+                <a href="bookdetail.html"><img class="book" src="images/history2.jpg" alt="Historical Book 2"></a>
+                <a href="bookdetail.html"><img class="book" src="images/history3.jpg" alt="Historical Book 3"></a>
             </div>
-            <div id="category">
+            <div class="category">
                 <h2><a href="category.html">Thriller</a></h2>
-                <img class="book" src="images/thriller1.jpg" alt="Thriller Book 1">
-                <img class="book" src="images/thriller2.jpg" alt="Thriller Book 2">
-                <img class="book" src="images/thriller3.jpg" alt="Thriller Book 3">
+                <a href="bookdetail.html"><img class="book" src="images/thriller1.jpg" alt="Thriller Book 1"></a>
+                <a href="bookdetail.html"><img class="book" src="images/thriller2.jpg" alt="Thriller Book 2"></a>
+                <a href="bookdetail.html"><img class="book" src="images/thriller3.jpg" alt="Thriller Book 3"></a>
             </div>
             
         </main>
+
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Copyright</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
