--- a/category.html
+++ b/category.html
@@ -8,16 +8,14 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="images/logo.png" alt="Logo">
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="category.html">Fiction</a></li>
-                    <li><a href="category.html">Educational</a></li>
-                    <li><a href="category.html">Historical</a></li>
-                    <li><a href="category.html">Thriller</a></li>
-                </ul>
-            </nav>
+            <img id="logo" src="images/logo.png" alt="Logo">
+            <div class="nav">
+                <a href="index.html">Home</a>
+                <a href="category.html" class="active">Fiction</a>
+                <a href="category.html">Educational</a>
+                <a href="category.html">Historical</a>
+                <a href="category.html">Thriller</a>
+            </div>
         </header>
 
         <main>
@@ -42,15 +40,13 @@
         </main>
 
         <footer>
-            <nav>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms</a></li>
-                    <li><a href="#">Copyright</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-            </nav>
+            <div class="nav">
+                <a href="#">About Us</a>
+                <a href="#">Privacy Policy
+                <a href="#">Terms</a>
+                <a href="#">Copyright</a>
+                <a href="contact.html">Contact Us</a>
+            </div>
         </footer>
     </body>
 </html>
