add book detail

--- a/bookdetail.html
+++ b/bookdetail.html
@@ -4,5 +4,56 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Book Details</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+    
+    <body>
+        <header>
+            <img id="logo" src="images/logo.png" alt="Logo">
+            <div class="nav">
+                <a href="index.html">Home</a>
+                <a href="category.html">Fiction</a>
+                <a href="category.html">Educational</a>
+                <a href="category.html">Historical</a>
+                <a href="category.html">Thriller</a>
+            </div>
+        </header>
+
+        <main>
+            <ul class="breadcrumb">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="category.html">Fiction</a></li>
+                <li>Nineteen Eighty-Four</li>
+            </ul>
+
+            <div class="flex-box-1">
+                <div id="book-img"><img src="images/fiction1.jpg" alt="Nineteen Eighty-Four book"></div>
+                <div class="flex-box-2">
+                    <div><img src="images/1984-1.jpg" alt="Nineteen Eighty-Four book"></div>
+                    <div><img src="images/1984-2.jpg" alt="Nineteen Eighty-Four book"></div>
+                    <div><img src="images/1984-3.jpg" alt="Nineteen Eighty-Four book"></div>
+                </div>
+                <div class="flex-box-3">
+                    <h2>Price: $100</h2>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+
+            <div class="description">
+                <h1>Nineteen Eighty-Four</h1>
+                <p>Nineteen Eighty-Four (also stylised as 1984) is a dystopian social science fiction novel and cautionary tale written by the English writer George Orwell. It was published on 8 June 1949 by Secker & Warburg as Orwell's ninth and final book completed in his lifetime. Thematically, it centres on the consequences of totalitarianism, mass surveillance and repressive regimentation of people and behaviours within society. Orwell, a democratic socialist, modelled the totalitarian government in the novel after Stalinist Russia and Nazi Germany. More broadly, the novel examines the role of truth and facts within politics and the ways in which they are manipulated.</p>
+                <p>The story takes place in an imagined future, the year 1984, when much of the world has fallen victim to perpetual war, omnipresent government surveillance, historical negationism, and propaganda. Great Britain, known as Airstrip One, has become a province of the totalitarian superstate Oceania, ruled by the Party, who employ the Thought Police to persecute individuality and independent thinking. Big Brother, the dictatorial leader of Oceania, enjoys an intense cult of personality, manufactured by the party's excessive brainwashing techniques. The protagonist, Winston Smith, is a diligent and skillful rank-and-file worker at the Ministry of Truth and Outer Party member who secretly hates the Party and dreams of rebellion. He expresses his dissent by writing in a diary and later enters into a forbidden relationship with his colleague Julia and starts to remember what life was like before the Party came to power.</p>
+            </div>
+            
+        </main>
+        <footer>
+            <div class="nav">
+                <a href="#">About Us</a>
+                <a href="#">Privacy Policy
+                <a href="#">Terms</a>
+                <a href="#">Copyright</a>
+                <a href="contact.html">Contact Us</a>
+            </div>
+        </footer>
+    </body>
 </html>
