--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                   
                 <div>
                     <label for="phone">Phone number:</label>
-                    <input required type="tel", id="phone", name="phone", pattern="[0,9]">
+                    <input required type="tel", id="phone", name="phone", pattern="[0-9]{10}">
                 </div>
                 
                 <div>
